--- a/FileBrowser/Base.lproj/LaunchScreen.storyboard
+++ b/FileBrowser/Base.lproj/LaunchScreen.storyboard
@@ -20,8 +20,29 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="folder" translatesAutoresizingMaskIntoConstraints="NO" id="WgH-CT-02f">
+                                <rect key="frame" x="137.5" y="283.5" width="100" height="100"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="100" id="2iF-QG-sIb"/>
+                                    <constraint firstAttribute="width" constant="100" id="YwT-wZ-s26"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2017 Ossey Inc." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tgO-RT-u5B">
+                                <rect key="frame" x="130" y="599" width="115.5" height="18"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <color key="tintColor" red="0.40000000600000002" green="0.71638997395833337" blue="0.92271592881944442" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="tgO-RT-u5B" firstAttribute="centerX" secondItem="WgH-CT-02f" secondAttribute="centerX" id="9fe-oP-XhM"/>
+                            <constraint firstItem="kh3-yb-m1g" firstAttribute="top" secondItem="tgO-RT-u5B" secondAttribute="bottom" constant="50" id="GMM-zp-A9Z"/>
+                            <constraint firstItem="WgH-CT-02f" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="Mmb-kZ-5wJ"/>
+                            <constraint firstItem="WgH-CT-02f" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="ccY-5D-Ds3"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -29,4 +50,7 @@
             <point key="canvasLocation" x="53" y="375"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="folder" width="128" height="128"/>
+    </resources>
 </document>
